app/assets/stylesheets/layouts/_event_index.scss
.main-header {
  margin: 0 auto var(--space-l) auto;
}

.events-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(max(240px,30vw), 1fr));
  column-gap: var(--space-m);
  margin-bottom: var(--space-xl);
  margin-left: var(--space-xl);
  margin-right: var(--space-xl);
}

.event-card {
  margin-bottom: var(--space-m);
}

.event-temporal-header {
  margin-left: var(--space-xl);
  margin-bottom: var(--space-s);
}

